@@ -95,7 +95,7 @@ class CDbMessageSource extends CMessageSource
 	{
 		if($this->cachingDuration>0 && $this->cacheID!==false && ($cache=Yii::app()->getComponent($this->cacheID))!==null)
 		{
-			$key=self::CACHE_KEY_PREFIX.'.messages';
+			$key=self::CACHE_KEY_PREFIX.'.messages.'.$category.'.'.$language;
 			if(($data=$cache->get($key))!==false)
 				return unserialize($data);
 		}
