@@ -34,11 +34,14 @@ Version 1.1a October 1, 2009
 
 Version 1.0.11 to be released
 -----------------------------
+- Bug #608: yiic webapp command may generate incorrect path referring to yii scripts (Qiang)
 - Bug #639: CJSON::decode() should respect the second parameter recursively (Qiang)
 - Bug #641: CDbCache::gc() is not defined (Qiang)
 - Bug #651: Fixed a bug in Oracle driver that may cause big loop (Qiang)
+- Bug #653: CDbMessageSource does translate messages when caching is enabled (Qiang)
 - Enh #643: Enhanced CAccessControlFilter::expression, COutputCache::varyByExpression and CExpressionDependency::expression so that they can use PHP callback (Qiang)
 - Enh: Added core message translation in Thai (Peerajak)
+- Enh: Allow CHtml::label() and CHtml::activeLabel() not to render the 'for' attribute when it is set false (Qiang)
 
 Version 1.0.10 October 18, 2009
 -------------------------------
